MP-606 :sparkles: Feat: 게시글 신고 후 대시보드 갱신 로직 구현
- 회원 도메인의 JPA 및 jOOQ 로직 컴포넌트화
- 전역에 있던 이벤트를 적절한 도메인 안으로 이동