@@ -59,7 +59,7 @@ class NotificationControllerTest implements NotificationTestUtils, NotificationR
             // then
             assertThat(result).isNotNull();
             assertThat(result.notifications()).hasSize(1);
-            assertThat(result.notifications().get(0).ulid()).isEqualTo(TEST_POST_LIKED_READ_NOTIFICATION_UNREAD_MODEL.ulid());
+            assertThat(result.notifications().getFirst().ulid()).isEqualTo(TEST_POST_LIKED_READ_NOTIFICATION_UNREAD_MODEL.ulid());
             assertThat(result.nextUlid()).isNull();
             assertThat(result.hasNext()).isFalse();
 
